# terminal-app

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  start.sh
locales/de/: main.yml
locales/en/: main.yml
src/: main.rs
src/config/: mod.rs
src/gui/: mod.rs
src/terminal/: linux.rs  mod.rs  windows.rs
src/ui/: mod.rs
